[gd_scene load_steps=8 format=3 uid="uid://cx0671axshj8j"]

[ext_resource type="Script" uid="uid://dxu7xuphn7bq5" path="res://scripts/PathBlock.gd" id="1"]
[ext_resource type="Script" uid="uid://e5d3j66ae3pa" path="res://scripts/PathRenderer.gd" id="2"]
[ext_resource type="Script" uid="uid://0jlh8ktxhso2" path="res://scripts/PathDebugLabel.gd" id="3"]
[ext_resource type="Script" uid="uid://crsnqk6awf8jy" path="res://scripts/PathDetectionBlock.gd" id="4"]
[ext_resource type="Script" uid="uid://doqcine8w430o" path="res://scripts/PathFlowDemo.gd" id="5"]
[ext_resource type="Script" uid="uid://cfgfqlhwy6uu2" path="res://scripts/AudioManager.gd" id="6_audio"]

[sub_resource type="Curve2D" id="Curve2D_0lspu"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 583.906, 353, 0, 0, 0, 0, 387.604, 361, 0, 0, 0, 0, 287.191, 554, 0, 0, 0, 0, 213.013, 825, 0, 0, 0, 0, 291.714, 1128, 0, 0, 0, 0, 372.225, 1280, 0, 0, 0, 0, 573.05, 1290, 0, 0, 0, 0, 806.442, 1285, 0, 0, 0, 0, 873.382, 1130, 0, 0, 0, 0, 953.894, 817, 0, 0, 0, 0, 874.288, 533, 0, 0, 0, 0, 802.823, 357, 0, 0, 0, 0, 636.374, 353, 0, 0, 0, 0, 583.906, 353)
}
point_count = 14

[node name="PathFlowDemo" type="Node2D"]
script = ExtResource("5")

[node name="BackgroundLayer" type="CanvasLayer" parent="."]

[node name="Background" type="ColorRect" parent="BackgroundLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.054902, 0.066667, 0.090196, 1)

[node name="World" type="CanvasLayer" parent="."]

[node name="Path" type="Path2D" parent="World"]
position = Vector2(-95, -75)
scale = Vector2(1.09329, 0.947705)
curve = SubResource("Curve2D_0lspu")
script = ExtResource("2")

[node name="BlockFollow" type="PathFollow2D" parent="World/Path"]
position = Vector2(583.906, 353)
rotation = 3.10086
script = ExtResource("1")

[node name="Block" type="Polygon2D" parent="World/Path/BlockFollow"]
color = Color(0.247059, 0.760784, 0.278431, 1)
antialiased = true
polygon = PackedVector2Array(-24, -15, 24, -15, 24, 15, -24, 15)

[node name="FlowArrow" type="Line2D" parent="World/Path/BlockFollow"]
points = PackedVector2Array(0, 0, 33, 0, 24, -9, 33, 0, 24, 9)
width = 5.0
default_color = Color(1, 0.847059, 0, 1)

[node name="DetectionBlock" type="Node2D" parent="World/Path"]
script = ExtResource("4")
size = Vector2(156, 48)
base_color = Color(0.2, 0.25, 0.35, 0.45)
lit_color = Color(0.95, 0.85, 0.2, 0.75)

[node name="CenterPopup" type="Label" parent="World"]
visible = false
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Got It!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UI" type="CanvasLayer" parent="."]
layer = 2

[node name="UIRoot" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="SpeedControls" type="VBoxContainer" parent="UI/UIRoot"]
layout_mode = 0
anchor_left = 0.02
anchor_top = 0.88
anchor_right = 0.24
anchor_bottom = 0.98
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="IncreaseSpeedButton" type="Button" parent="UI/UIRoot/SpeedControls"]
custom_minimum_size = Vector2(0, 56)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 42
text = "↑"

[node name="DecreaseSpeedButton" type="Button" parent="UI/UIRoot/SpeedControls"]
custom_minimum_size = Vector2(0, 56)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 42
text = "↓"

[node name="DPad" type="VBoxContainer" parent="UI/UIRoot"]
layout_mode = 0
anchor_left = 0.76
anchor_top = 0.82
anchor_right = 0.98
anchor_bottom = 0.98
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="ArrowUpButton" type="Button" parent="UI/UIRoot/DPad"]
custom_minimum_size = Vector2(0, 56)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 42
text = "↑"

[node name="MiddleRow" type="HBoxContainer" parent="UI/UIRoot/DPad"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="ArrowLeftButton" type="Button" parent="UI/UIRoot/DPad/MiddleRow"]
custom_minimum_size = Vector2(0, 56)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 42
text = "←"

[node name="ArrowRightButton" type="Button" parent="UI/UIRoot/DPad/MiddleRow"]
custom_minimum_size = Vector2(0, 56)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 42
text = "→"

[node name="ArrowDownButton" type="Button" parent="UI/UIRoot/DPad"]
custom_minimum_size = Vector2(0, 56)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 42
text = "↓"

[node name="PauseButton" type="Button" parent="UI/UIRoot"]
custom_minimum_size = Vector2(0, 56)
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 66.0
offset_bottom = 66.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 42
text = "⏸"

[node name="OneThirdLine" type="ColorRect" parent="UI"]
anchors_preset = -1
anchor_top = 0.666667
anchor_right = 1.0
anchor_bottom = 0.666667
offset_top = -1.0
offset_bottom = 1.0
mouse_filter = 2
color = Color(0, 1, 0, 1)

[node name="PauseOverlay" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="CountdownLabel" type="Label" parent="UI/PauseOverlay"]
visible = false
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 96
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Dim" type="ColorRect" parent="UI/PauseOverlay"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="Panel" type="Panel" parent="UI/PauseOverlay"]
layout_mode = 0
anchor_left = 0.2
anchor_top = 0.25
anchor_right = 0.8
anchor_bottom = 0.75

[node name="VBox" type="VBoxContainer" parent="UI/PauseOverlay/Panel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 24.0
offset_right = -24.0
offset_bottom = -24.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 16
alignment = 1

[node name="Title" type="Label" parent="UI/PauseOverlay/Panel/VBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 42
text = "Paused"
horizontal_alignment = 1

[node name="MusicRow" type="HBoxContainer" parent="UI/PauseOverlay/Panel/VBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 12
alignment = 1

[node name="MusicLabel" type="Label" parent="UI/PauseOverlay/Panel/VBox/MusicRow"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "Music"

[node name="MusicSlider" type="HSlider" parent="UI/PauseOverlay/Panel/VBox/MusicRow"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01

[node name="SfxRow" type="HBoxContainer" parent="UI/PauseOverlay/Panel/VBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 12
alignment = 1

[node name="SfxLabel" type="Label" parent="UI/PauseOverlay/Panel/VBox/SfxRow"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "SFX"

[node name="SfxSlider" type="HSlider" parent="UI/PauseOverlay/Panel/VBox/SfxRow"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01

[node name="ResumeButton" type="Button" parent="UI/PauseOverlay/Panel/VBox"]
custom_minimum_size = Vector2(0, 56)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 42
text = "Resume Game"

[node name="AttemptsLabel" type="Label" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -160.0
offset_top = 8.0
offset_right = 160.0
offset_bottom = 80.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 42
text = "Attempts: 5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PathDebug" type="Label" parent="UI"]
visible = false
offset_left = 8.0
offset_top = 8.0
offset_right = 208.0
offset_bottom = 36.0
text = "Baked: -"
script = ExtResource("3")
path_node = NodePath("../World/Path")

[node name="QuitButton" type="Button" parent="UI"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -104.0
offset_right = 150.0
offset_bottom = -48.0
focus_mode = 0
theme_override_font_sizes/font_size = 42
text = "Quit"

[node name="Audio" type="Node" parent="."]
script = ExtResource("6_audio")

[connection signal="pressed" from="UI/UIRoot/SpeedControls/IncreaseSpeedButton" to="World/Path/BlockFollow" method="increase_speed"]
[connection signal="pressed" from="UI/UIRoot/SpeedControls/DecreaseSpeedButton" to="World/Path/BlockFollow" method="decrease_speed"]
[connection signal="pressed" from="UI/UIRoot/DPad/MiddleRow/ArrowRightButton" to="World/Path/BlockFollow" method="toggle_direction"]
[connection signal="pressed" from="UI/QuitButton" to="." method="_on_quit_pressed"]
